Add get score endpoint
